--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Practical_1</string>
+    <string name="recording_number">Recording %1$d</string>
+    <string name="image_directory" translatable="false">Pictures/CameraX-Image</string>
+    <string name="video_directory" translatable="false">Movies/CameraX-Video</string>
 </resources>
